--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@auth0/auth0-react": "^2.0.1",
+    "@fontsource/rubik": "^4.5.14",
+    "@fontsource/zen-maru-gothic": "^4.5.16",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
